--- a/Pipfile
+++ b/Pipfile
@@ -15,6 +15,7 @@ pymongo = "*"
 config-guiosoft = "*"
 py3-validate-email = "*"
 password-strength = "*"
+escoteiros-mappa = "*"
 
 [requires]
 python_version = "3.8"
