--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,13 +8,11 @@
         "lint": "vue-cli-service lint"
     },
     "dependencies": {
-        "@sweetalert2/theme-material-ui": "^3.2.0",
         "axios": "^0.19.2",
         "core-js": "^3.6.5",
-        "sweetalert2": "^9.17.1",
         "vue": "^2.6.11",
-        "vue-router": "^3.4.1",
-        "vue-sweetalert2": "^3.0.6",
+        "vue-router": "^3.4.3",
+        "vue-simple-alert": "^1.1.1",
         "vuetify": "^2.2.11",
         "vuex": "^3.5.1"
     },
