--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -16,7 +16,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install pylint
-    - name: Test with pytest
+        pip install flake8
+    - name: Run flake8
       run: |
-        pylint `ls -R|grep .py$|xargs`
+        flake8 . --ignore errors=E501        
