--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -19,4 +19,4 @@ jobs:
         pip install flake8
     - name: Run flake8
       run: |
-        flake8 . --ignore errors=E501        
+        flake8 . --ignore-errors=E501        
