--- a/.github/workflows/linters.yml
+++ b/.github/workflows/linters.yml
@@ -48,7 +48,9 @@ jobs:
 
       # ESLint and Prettier must be in `package.json`
       - name: Install Node.js dependencies
-        run: npm install
+        run: |
+          cd frontend
+          npm install
 
       - name: Run linters
         uses: wearerequired/lint-action@v1
