--- a/.github/workflows/linters.yml
+++ b/.github/workflows/linters.yml
@@ -2,40 +2,40 @@ name: Linters
 
 on: [push]
 
-jobs:  
-  changes:    
+jobs:
+  changes:
     runs-on: ubuntu-latest
     outputs:
       backend: ${{ steps.filter.outputs.backend }}
       frontend: ${{ steps.filter.outputs.frontend }}
-    steps:  
-    - uses: actions/checkout@v2
-    - uses: dorny/paths-filter@v2.2.1
-      id: filter
-      with:
-        filters: |
-          backend:
-            - '**/*.py'
-          frontend:
-            - 'frontend/**/*'
-        
+    steps:
+      - uses: actions/checkout@v2
+      - uses: dorny/paths-filter@v2.2.1
+        id: filter
+        with:
+          filters: |
+            backend:
+              - '**/*.py'
+            frontend:
+              - 'frontend/**/*'
+
   backend:
     runs-on: ubuntu-latest
     needs: changes
     if: ${{ needs.changes.outputs.backend == 'true' }}
     steps:
-    - name: Set up Python 3.8
-      uses: actions/setup-python@v1
-      with:
-        python-version: 3.8
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install flake8
-    - name: Run flake8
-      run: |
-        flake8 --count --select=E9,F63,F7,F82 --show-source --statistics .
-        
+      - name: Set up Python 3.8
+        uses: actions/setup-python@v1
+        with:
+          python-version: 3.8
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install flake8
+      - name: Run flake8
+        run: |
+          flake8 --count --select=E9,F63,F7,F82 --show-source --statistics .
+
   frontend:
     runs-on: ubuntu-latest
     needs: changes
@@ -48,14 +48,8 @@ jobs:
 
       # ESLint and Prettier must be in `package.json`
       - name: Install Node.js dependencies
+        working-directory: ./frontend
         run: |
           cd frontend
           npm install
-
-      - name: Run linters
-        uses: wearerequired/lint-action@v1
-        with:
-          # github_token: ${{ secrets.github_token }}
-          # Enable linters
-          eslint: true
-          prettier: true
+          npm run lint
