--- a/.github/workflows/linters.yml
+++ b/.github/workflows/linters.yml
@@ -40,15 +40,17 @@ jobs:
     runs-on: ubuntu-latest
     needs: changes
     if: ${{ needs.changes.outputs.frontend == 'true' }}
+    strategy:
+      matrix:
+        node-version: [8.x, 10.x, 12.x]
     steps:
-      - name: Set up Node.js
+      - name: Set up Node.js ${{ matrix.node-version }}
         uses: actions/setup-node@v1
         with:
-          node-version: 12
-
-      # ESLint and Prettier must be in `package.json`
-      - name: Install Node.js dependencies
-        working-directory: ./frontend
-        run: |          
-          npm install
+          node-version: ${{ matrix.node-version }}
+      - name: Installing dependencies
+        run: |
+          pwd
+          npm ci
           npm run lint
+        working-directory: ./frontend
