--- a/.github/workflows/linters.yml
+++ b/.github/workflows/linters.yml
@@ -42,15 +42,14 @@ jobs:
     if: ${{ needs.changes.outputs.frontend == 'true' }}
     strategy:
       matrix:
-        node-version: [8.x, 10.x, 12.x]
+        node-version: [10.x, 12.x]
     steps:
       - name: Set up Node.js ${{ matrix.node-version }}
         uses: actions/setup-node@v1
         with:
           node-version: ${{ matrix.node-version }}
       - name: Installing dependencies
-        run: |
-          pwd
+        run: |          
           npm ci
           npm run lint
         working-directory: ./frontend
