--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -15,7 +15,7 @@ jobs:
 
     strategy:
       matrix:
-        node-version: [10.x, 12.x, 14.x]
+        node-version: [12.x, 14.x]
 
     steps:
       - uses: actions/checkout@v2
@@ -23,10 +23,9 @@ jobs:
         uses: actions/setup-node@v1
         with:
           node-version: ${{ matrix.node-version }}
-      - run: |
-          cd ./frontend
-          npm ci
-          npm lint
+      - run: cd ./frontend
+      - run: npm ci
+      - run: npm lint
     #- run: npm run build --if-present
     # - run: npm lint
     # - run: npm test
