--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -26,8 +26,8 @@ jobs:
       - run: |
           cd ./frontend
           npm ci
-          npm lint
-          npm build
+          npm run lint
+          npm run build
 
     #- run: npm run build --if-present
     # - run: npm lint
