--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,8 +9,10 @@
     },
     "dependencies": {
         "axios": "^0.19.2",
+        "chart.js": "^2.9.3",
         "core-js": "^3.6.5",
         "vue": "^2.6.12",
+        "vue-chartjs": "^3.5.1",
         "vue-polyglot": "^2.0.1",
         "vue-router": "^3.4.3",
         "vue-simple-alert": "^1.1.1",
