--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -15,5 +15,13 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
-    - name: Build the Docker image
-      run: docker build . --file Dockerfile --tag escoteirando:$(date +%Y%m%d%H%M)
+    #- name: Build the Docker image
+    #  run: docker build . --file Dockerfile --tag escoteirando:$(date +%Y%m%d%H%M)
+    - name: Push to GitHub Packages
+      uses: docker/build-push-action@v1
+      with:
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+          registry: docker.pkg.github.com
+          repository: guionardo/escoteirando_fastap/escoteirando
+          tag_with_ref: true
