--- a/requirements.txt
+++ b/requirements.txt
@@ -5,4 +5,4 @@ pymongo==3.11.0
 config-guiosoft==0.1.5
 py3-validate-email==0.2.9
 escoteiros-mappa==0.1.1
-cache-guiosoft=0.0.7
+cache-guiosoft==0.0.7
